work/v08/API_INVENTORY_BEFORE.md
# `@syna/core` public API inventory

Generated by `node scripts/api-inventory.mjs` from `packages/core/src/index.ts` (package version 0.7.0, commit 72f1991).

| exports | value exports | type-only exports | members (interface/class) | union members | `@deprecated` items |
|---|---|---|---|---|---|
| 91 | 10 | 81 | 232 | 44 | 0 |

## Value exports (10)

### `auto` — function

Declared in `packages/core/src/definition.ts`.

```ts
function auto<C extends Contract<any>>(contract: C): AutoImplementation<C>
```

### `createRuntime` — function

Declared in `packages/core/src/runtime.ts`.

```ts
function createRuntime(options: CreateRuntimeOptions): Runtime
```

### `defaultRuntimePolicy` — const

Declared in `packages/core/src/runtime.ts`.

```ts
const defaultRuntimePolicy: RuntimePolicy
```

### `definePackage` — function

Declared in `packages/core/src/definition.ts`.

```ts
function definePackage(manifest: PackageManifest): PackageDefinitions
```

### `forward` — function

Declared in `packages/core/src/definition.ts`.

```ts
function forward<D extends Dependency>(get: () => D): ForwardDependency<D>
```

### `isSynaError` — function

Declared in `packages/core/src/errors.ts`.

```ts
function isSynaError<Code extends SynaErrorCode = SynaErrorCode>(error: unknown, code?: Code): error is SynaError<Code>
```

### `loadAll` — function

Declared in `packages/core/src/loading.ts`.

```ts
async function loadAll< const Refs extends Readonly<Record<string, ServiceRef<unknown>>>, >(refs: Refs, options?: LoadOptions): Promise<LoadedDependencies<Refs>>
```

### `override` — function

Declared in `packages/core/src/definition.ts`.

```ts
function override< From extends ServiceRevision<any>, To extends ServiceRevision<any>, >( from: From, to: ServiceInstance<To> extends ServiceInstance<From> ? To : never, ): ServiceOverride<From, To>
```

### `parseImplementationRef` — function

Declared in `packages/core/src/definition.ts`.

```ts
function parseImplementationRef<C extends Contract<any>>( contract: C, input: unknown, ): ImplementationRef<C>
```

### `SynaError` — const + type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaError<Code extends SynaErrorCode = SynaErrorCode> = Code extends SynaErrorCode ? SynaErrorOf<Code> : never
const SynaError: SynaErrorConstructor
```

## Type exports (81)

### `AllImplementations` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AllImplementations<C extends Contract<any> = Contract<any>>
  readonly kind: 'all-implementations'
  readonly contract: C
```

### `AnchoredEntry` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AnchoredEntry<E extends EntryDescriptor<any, any>>
  enter(...args: EntryCallArguments<E>): Promise<EnvHandle<E['requires']>>
  run<Result>(...args: EntryRunCallArguments<E, Result>): Promise<Result>
  check(...args: EntryCallArguments<E>): Promise<EntryCheck>
  explain(...args: EntryCallArguments<E>): Promise<EntryExplanation>
```

### `AutoImplementation` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface AutoImplementation<C extends Contract<any> = Contract<any>>
  readonly kind: 'auto-implementation'
  readonly contract: C
```

### `Awaitable` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Awaitable<T> = T | PromiseLike<T>
```

### `Binding` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Binding<C extends Contract<any> = Contract<any>>
  readonly kind: 'binding'
  readonly id: string
  readonly apiVersion: number
  readonly contract: C
  readonly metadata: Readonly<DescriptorMetadata>
  to<S extends ServiceRevision<any, any>>( service: ServiceInstance<S> extends ContractApi<C> ? S : never, version?: string, ): ImplementationRef<C>
  parse(input: unknown): ImplementationRef<C>
```

### `BindingAssignment` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type BindingAssignment<B extends Binding<any>> = | ImplementationRef<B['contract']> | ServiceRevision<ContractApi<B['contract']>>
```

### `CandidateRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CandidateRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'candidate-ref'
  readonly contract: C
  readonly familyId: string
  readonly version: string
  readonly __type?: C
```

### `Contract` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Contract<Api = unknown>
  readonly kind: 'contract'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  readonly all: AllImplementations<Contract<Api>>
  readonly __type?: Api
```

### `ContractApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ContractApi<C> = C extends Contract<infer Api> ? Api : never
```

### `CreateRuntimeOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface CreateRuntimeOptions
  readonly services: readonly ServiceRevision[]
  readonly policy?: Partial<RuntimePolicy>
  readonly overrides?: readonly ServiceOverride[]
  readonly limits?: RuntimeLimits
  readonly diagnostics?: DiagnosticsOptions
```

### `DefinitionOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DefinitionOptions
  readonly apiVersion?: number
  readonly metadata?: DescriptorMetadata
```

### `Dependency` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type Dependency = | ServiceRevision<any, any> | ServiceRange<any> | Contract<any> | Input<any> | Binding<any> | AutoImplementation<any> | AllImplementations<any> | EntryDescriptor<any, any> | ForwardDependency<any>
```

### `DependencyMap` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyMap = Readonly<Record<string, Dependency>>
```

### `DependencyRefFor` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefFor<D> = UnwrapForward<D> extends Input<infer T> ? InputRef<T> : ServiceRef<DependencyOutput<D>>
```

### `DependencyRefs` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type DependencyRefs<Requires extends DependencyMap> = { readonly [Key in keyof Requires]: DependencyRefFor<Requires[Key]> }
```

### `DescriptorMetadata` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DescriptorMetadata
  readonly displayName?: string
  readonly description?: string
  readonly tags?: readonly string[]
  readonly data?: Readonly<Record<string, MetadataValue>>
```

### `DiagnosticCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type DiagnosticCode = SynaErrorCode | 'UNKNOWN_ERROR'
  | 'UNKNOWN_ERROR'
```

### `DiagnosticsOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface DiagnosticsOptions
  readonly onEvent?: (event: RuntimeEvent) => void
```

### `EntryArguments` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryArguments<E extends EntryDescriptor<any, any>> = EntryParameterValues<E['parameters']>
```

### `EntryCallback` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCallback<E extends EntryDescriptor<any, any>, Result> = ( dependencies: EntryDependencies<E>, env: EnvHandle<E['requires']>, ) => Awaitable<Result>
```

### `EntryCheck` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryCheck = | { readonly ok: true; readonly inspection: PlannedEnvInspection } | { readonly ok: false; readonly error: EntryDiagnostic }
```

### `EntryDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDefinition<Requires extends DependencyMap, Parameters extends EntryParameterMap> extends DefinitionOptions
  readonly requires?: Requires
  readonly parameters?: Parameters
  readonly reuse?: ReuseConstraints
```

### `EntryDependencies` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryDependencies<E extends EntryDescriptor<any, any>> = DependencyRefs<E['requires']>
```

### `EntryDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDescriptor<Requires extends DependencyMap = DependencyMap, Parameters extends EntryParameterMap = EntryParameterMap>
  readonly kind: 'entry'
  readonly package: PackageDescriptor
  readonly id: string
  readonly apiVersion: number
  readonly requires: Requires
  readonly parameters: Parameters
  readonly reuse: Readonly<ReuseConstraints>
  readonly metadata: Readonly<DescriptorMetadata>
```

### `EntryDiagnostic` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryDiagnostic
  readonly code: DiagnosticCode
  readonly message: string
  readonly details: Readonly<Record<string, unknown>>
```

### `EntryExplanation` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryExplanation = EntryExplanationSuccess | EntryExplanationFailure
```

### `EntryExplanationFailure` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationFailure
  readonly ok: false
  readonly entry: string
  readonly parent?: string
  readonly error: EntryDiagnostic
  readonly missingInputs: readonly string[]
  readonly missingBindings: readonly string[]
```

### `EntryExplanationSuccess` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryExplanationSuccess
  readonly ok: true
  readonly entry: string
  readonly parent?: string
  readonly parameters: { readonly inputsProvided: readonly string[] readonly inputsInherited: readonly string[] readonly bindingsResolved: Readonly<Record<string, string>> readonly bindingsInherited: Readonly<Record<string, string>> }
  readonly services: ExplainCounts & { readonly eagerToStart: number readonly eagerInherited: number }
  readonly inputs: { readonly inherited: number; readonly provided: number }
  readonly synthetic: ExplainCounts
  readonly choices: Readonly<Record<string, string>>
  readonly nodes: readonly ExplainedNode[]
  readonly forks: readonly ExplainedNode[]
```

### `EntryOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EntryOptions
  readonly reuse?: ReuseConstraints
```

### `EntryParameters` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EntryParameters<E extends EntryDescriptor<any, any>> = E['parameters']
```

### `EnvHandle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvHandle<Requires extends DependencyMap = DependencyMap>
  readonly id: string
  readonly deps: DependencyRefs<Requires>
  readonly state: EnvState
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunCallArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryExplanation>
  derive(reuse?: ReuseConstraints): Promise<EnvHandle<{}>>
  anchor<E extends EntryDescriptor>(entry: E): AnchoredEntry<E>
  inspect(): EnvInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `EnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspection
  readonly id: string
  readonly parentId?: string
  readonly state: string
  readonly nodes: readonly EnvInspectionNode[]
  readonly abandonedAttempts: readonly UnsettledAttemptInspection[]
```

### `EnvInspectionNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface EnvInspectionNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly slotId: string
  readonly ownerEnvId: string
  readonly state: string
  readonly overdueMs?: number
  readonly dependencies: Readonly<Record<string, string>>
```

### `EnvState` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type EnvState = 'activating' | 'ready' | 'disposing' | 'disposed'
  | 'activating'
  | 'ready'
  | 'disposing'
  | 'disposed'
```

### `ExplainCounts` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainCounts
  readonly inherited: number
  readonly new: number
  readonly forked: number
```

### `ExplainedNode` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ExplainedNode
  readonly nodeId: string
  readonly kind: InspectionNodeKind
  readonly label: string
  readonly disposition: NodeDisposition
  readonly eager: boolean
  readonly cause?: ForkCause
  readonly path: readonly string[]
```

### `FailureAfterExhaustion` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type FailureAfterExhaustion = 'sticky' | 'retry-on-next-load'
  | 'sticky'
  | 'retry-on-next-load'
```

### `ForkCause` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ForkCause = | { readonly kind: 'root' } | { readonly kind: 'not-in-parent' } | { readonly kind: 'fresh'; readonly target: string } | { readonly kind: 'input-provided'; readonly input: string } | { readonly kind: 'binding-changed'; readonly binding: string } | { readonly kind: 'structure-changed' } | { readonly kind: 'anchor-dependency-mismatch'; readonly family: string; readonly via: string } | { readonly kind: 'dependency-forked'; readonly via: string; readonly dependency: string }
```

### `ForwardDependency` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ForwardDependency<D = Dependency>
  readonly kind: 'forward-dependency'
  readonly get: () => D
```

### `ImplementationCandidate` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationCandidate<C extends Contract<any> = Contract<any>> extends ImplementationDescriptor<C>
  readonly ref: CandidateRef<C>
```

### `ImplementationDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationDescriptor<C extends Contract<any> = Contract<any>>
  readonly contractId: string
  readonly familyId: string
  readonly version: string
  readonly eager: boolean
  readonly familyMetadata: Readonly<DescriptorMetadata>
  readonly revisionMetadata: Readonly<DescriptorMetadata>
  readonly persistentRef: ImplementationRef<C>
```

### `ImplementationRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationRef<C extends Contract<any> = Contract<any>>
  readonly kind: 'persistent-implementation-ref'
  readonly contractId: string
  readonly familyId: string
  readonly version: string
  readonly __type?: C
```

### `ImplementationSet` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ImplementationSet<C extends Contract<any> = Contract<any>> extends Iterable<ImplementationCandidate<C>>
  readonly contract: C
  readonly candidates: readonly ImplementationCandidate<C>[]
  resolve(ref: ImplementationRef<C>): ImplementationCandidate<C>
  load( candidate: ImplementationCandidate<C> | CandidateRef<C> | ImplementationRef<C>, options?: LoadOptions, ): Promise<ContractApi<C>>
```

### `Input` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Input<ValueType = unknown>
  readonly kind: 'input'
  readonly id: string
  readonly apiVersion: number
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __type?: ValueType
```

### `InputRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface InputRef<T>
  read(): T
```

### `InputType` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InputType<I> = I extends Input<infer T> ? T : never
```

### `InspectionNodeKind` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type InspectionNodeKind = | 'service' | 'input' | 'binding' | 'all' | 'entry'
  | 'service'
  | 'input'
  | 'binding'
  | 'all'
  | 'entry'
```

### `LoadedDependencies` — type

Declared in `packages/core/src/loading.ts`.

```ts
type LoadedDependencies<Refs extends Readonly<Record<string, ServiceRef<unknown>>>> = { readonly [Key in keyof Refs]: Refs[Key] extends ServiceRef<infer Value> ? Value : never }
```

### `LoadOptions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface LoadOptions
  readonly signal?: AbortSignal
```

### `MetadataValue` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type MetadataValue = | string | number | boolean | null | readonly MetadataValue[] | { readonly [key: string]: MetadataValue }
```

### `NodeDisposition` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type NodeDisposition = 'inherited' | 'new' | 'forked'
  | 'inherited'
  | 'new'
  | 'forked'
```

### `PackageDefinitions` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDefinitions
  readonly package: PackageDescriptor
  contract<Api>(): Contract<Api>
  contract<Api>(options: DefinitionOptions): Contract<Api>
  contract<Api>(name: string, options?: DefinitionOptions): Contract<Api>
  input<T>(name: string, options?: DefinitionOptions): Input<T>
  binding<C extends Contract<any>>( name: string, contract: C, options?: DefinitionOptions, ): Binding<C>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  service< const Requires extends DependencyMap = {}, const Provides extends readonly Contract[] = readonly [], Instance extends ProvidedShape<Provides> = ProvidedShape<Provides>, >( name: string, definition: ServiceDefinition<Requires, Provides, Instance>, ): ServiceRevision<Instance, ProvidedShape<Provides>>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
  entry< const Requires extends DependencyMap = {}, const Parameters extends EntryParameterMap = {}, >( name: string, definition: EntryDefinition<Requires, Parameters>, ): EntryDescriptor<Requires, Parameters>
```

### `PackageDescriptor` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageDescriptor
  readonly name: string
  readonly id: string
  readonly version: string
  readonly metadata: Readonly<DescriptorMetadata>
```

### `PackageManifest` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PackageManifest
  readonly name: string
  readonly version: string
  readonly description?: string
  readonly syna?: { readonly id?: string readonly metadata?: DescriptorMetadata }
```

### `PlannedEnvInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface PlannedEnvInspection
  readonly nodeCount: number
  readonly ownedSlotCount: number
  readonly reusedSlotCount: number
  readonly eagerServiceCount: number
  readonly selectedRevisions: Readonly<Record<string, string>>
```

### `ProvidedShape` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ProvidedShape<Provides extends readonly Contract[]> = [Provides[number]] extends [never] ? unknown : UnionToIntersection<ContractApiUnion<Provides>>
```

### `ReuseConstraints` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ReuseConstraints
  readonly fresh?: readonly ReuseTarget[]
  readonly share?: readonly ReuseTarget[]
```

### `ReuseTarget` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ReuseTarget = ServiceRevision<any> | ServiceFamily<any>
```

### `Runtime` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface Runtime
  readonly catalog: RuntimeCatalog
  enter<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EnvHandle<E['requires']>>
  run<E extends EntryDescriptor<any, any>, Result>( entry: E, ...args: EntryRunCallArguments<E, Result> ): Promise<Result>
  check<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryCheck>
  explain<E extends EntryDescriptor<any, any>>( entry: E, ...args: EntryCallArguments<E> ): Promise<EntryExplanation>
  inspect(): RuntimeInspection
  dispose(): Promise<void>
  [Symbol.asyncDispose](): Promise<void>
```

### `RuntimeCatalog` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeCatalog
  implementations<C extends Contract<any>>( contract: C, ): readonly ImplementationDescriptor<C>[]
  resolve<C extends Contract<any>>( ref: ImplementationRef<C>, ): ImplementationDescriptor<C>
  revisions(familyId: string): readonly string[]
```

### `RuntimeEvent` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type RuntimeEvent = | { /** * The first waiter on a setup attempt timed out: the attempt is overdue * from now on (`inspect()` reports `overdueMs` for its slot) and keeps * running. Once per attempt. */ readonly type: 'attempt-overdue' readonly slot: string readonly revision: string readonly env: string readonly attempt: number readonly deadlineMs: number readonly elapsedMs: number } | { /** * An overdue or abandoned attempt succeeded late. `adopted`: the owner * Env was still ready, so the instance became the slot's (no cleanup ran, * `cleanupErrors` is empty); otherwise a close discarded the result and * the cleanups the attempt registered ran. */ readonly type: 'late-setup-result' readonly slot: string readonly revision: string readonly env: string readonly adopted: boolean readonly cleanupErrors: readonly unknown[] } | { /** An overdue or abandoned attempt failed late; its cleanups ran. An overdue attempt then follows its failure policy. */ readonly type: 'late-setup-failure' readonly slot: string readonly revision: string readonly env: string readonly error: unknown readonly cleanupErrors: readonly unknown[] } | { /** * The owner's bounded close gave up waiting for this attempt; the Env is * `disposed` regardless and the attempt stays in the ledger until it * settles late or is found unreachable. */ readonly type: 'attempt-abandoned' /** `setup`: the raw Promise is still pending. `rollback`: the setup settled but its cleanups outlived the grace. */ readonly phase: 'setup' | 'rollback' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number /** * The Service slots the attempt depends on, closed in the normal order * regardless (the Runtime cannot revoke an instance it handed out): an * attempt that keeps running past the grace may observe them closed. */ readonly dependencies: readonly { readonly dependency: string readonly slot: string readonly revision: string readonly state: string }[] } | { /** * `runtime.dispose()` ended with attempts still in the ledger (abandoned, * rolling back or settling late); their resources are outside Syna * control. Once per Runtime close, after the grace given to late cleanups. */ readonly type: 'attempts-outstanding' readonly attempts: readonly UnsettledAttemptInspection[] } | { /** * The raw setup Promise of a timed-out or abandoned attempt was garbage- * collected before settling: nothing can resolve it any more. Cleanups the * attempt registered were run and the attempt is settled as failed. */ readonly type: 'attempt-unreachable' readonly slot: string readonly revision: string readonly env: string readonly elapsedMs: number readonly cleanupErrors: readonly unknown[] } | { readonly type: 'foreign-thenable-setup' readonly slot: string readonly revision: string readonly env: string } | { /** * The Runtime read an implementation reference whose family was given * under the 0.5 serialized key `implementationId` (a raw object carrying * only that key, or a ref `parse()` produced from one). The reference is * accepted permanently; the event is reported once per read so stored * documents can be rewritten to the `familyId` form at leisure. */ readonly type: 'legacy-implementation-ref' readonly contractId: string readonly familyId: string readonly version: string /** Where the reference was read: a Binding site, `catalog.resolve()` or an `ImplementationSet` site. */ readonly site: string }
```

### `RuntimeInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeInspection
  readonly admittedServices: readonly string[]
  readonly internalServices: readonly string[]
  readonly overriddenServices: readonly string[]
  readonly definitions: DefinitionCounts
  readonly rootEnvCount: number
  readonly liveEnvCount: number
  readonly unsettledAttempts: readonly UnsettledAttemptInspection[]
  readonly planCache: { readonly hits: number readonly misses: number readonly entries: number readonly evictions: number readonly maxEntries: number }
  readonly definitionWarnings: readonly string[]
```

### `RuntimeLimits` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimeLimits
  readonly setupDeadlineMs?: number
  readonly disposalGraceMs?: number
  readonly planningBudget?: number
  readonly planCacheEntries?: number
```

### `RuntimePolicy` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicy
  orderAutoCandidates( contract: Contract, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
  orderVersionCandidates( family: ServiceFamily, candidates: readonly ServiceRevision[], context: RuntimePolicyContext, ): readonly ServiceRevision[]
```

### `RuntimePolicyContext` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface RuntimePolicyContext
  readonly dependencySite: string
  readonly parentActiveRevisionKeys: ReadonlySet<string>
```

### `ServiceDefinition` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceDefinition<Requires extends DependencyMap, Provides extends readonly Contract[], Instance>
  readonly requires?: Requires
  readonly provides?: Provides
  readonly eager?: boolean
  readonly uniqueWithin?: 'lineage'
  readonly failure?: ServiceFailurePolicy
  readonly setupDeadlineMs?: number
  readonly metadata?: DescriptorMetadata
  readonly revisionMetadata?: DescriptorMetadata
  readonly setup: ( dependencies: DependencyRefs<Requires>, lifecycle: ServiceLifecycle, ) => SetupResult<Instance>
```

### `ServiceFailurePolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFailurePolicy = | 'sticky' | { /** Total attempts in one materialization sequence, including the first. */ readonly attempts?: number /** Delay between attempts in the same sequence. */ readonly delayMs?: number readonly afterExhaustion?: FailureAfterExhaustion /** Minimum delay before a future load may start another sequence. */ readonly cooldownMs?: number }
  | 'sticky'
```

### `ServiceFamily` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceFamily<PublicApi = unknown>
  readonly kind: 'service-family'
  readonly id: string
  readonly uniqueWithin: UniquenessPolicy
  readonly metadata: Readonly<DescriptorMetadata>
  readonly __type?: PublicApi
```

### `ServiceFamilyApi` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceFamilyApi<F> = F extends ServiceFamily<infer Api> ? Api : never
```

### `ServiceInstance` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type ServiceInstance<S> = S extends ServiceRevision<infer Instance, any> ? Instance : never
```

### `ServiceLifecycle` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceLifecycle
  readonly signal: AbortSignal
  onDispose(cleanup: () => Awaitable<void>): void
```

### `ServiceOverride` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceOverride<From extends ServiceRevision<any> = ServiceRevision<any>, To extends ServiceRevision<any> = ServiceRevision<any>>
  readonly kind: 'service-override'
  readonly from: From
  readonly to: To
```

### `ServiceRange` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRange<F extends ServiceFamily<any> = ServiceFamily<any>>
  readonly kind: 'service-range'
  readonly family: F
  readonly range: string
  readonly origin: ServiceRevision<any, any>
  readonly requiredContractIds: readonly string[]
```

### `ServiceRef` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRef<T>
  load(options?: LoadOptions): Promise<T>
```

### `ServiceRevision` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface ServiceRevision<Instance = unknown, PublicApi = unknown>
  readonly kind: 'service-revision'
  readonly package: PackageDescriptor
  readonly family: ServiceFamily<PublicApi>
  readonly version: string
  readonly key: string
  readonly requires: DependencyMap
  readonly provides: readonly Contract[]
  readonly eager: boolean
  readonly failure: NormalizedServiceFailurePolicy
  readonly setupDeadlineMs: number | undefined
  readonly metadata: Readonly<DescriptorMetadata>
  setup( dependencies: DependencyRefs<DependencyMap>, lifecycle: ServiceLifecycle, ): SetupResult<Instance>
  range(version?: string): ServiceRange<ServiceFamily<PublicApi>>
```

### `SynaErrorCode` — type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaErrorCode = | 'AMBIGUOUS_IMPLEMENTATION' | 'DUPLICATE_DEFINITION' | 'ENTRY_ACTIVATION_FAILED' | 'ENV_CLOSED' | 'FOREIGN_CANDIDATE_REF' | 'INACTIVE_REUSE_TARGET' | 'INCOMPATIBLE_IMPLEMENTATION' | 'INITIALIZATION_TIMEOUT' | 'INVALID_DESCRIPTOR' | 'INVALID_INHERITED_CHOICE' | 'LIFECYCLE_MISUSE' | 'LINEAGE_UNIQUENESS_CONFLICT' | 'LOAD_CANCELLED' | 'MISSING_AUTO_POLICY' | 'MISSING_BINDING' | 'MISSING_IMPLEMENTATION' | 'MISSING_INPUT' | 'MISSING_SERVICE' | 'OWNER_NOT_READY' | 'PLANNING_BUDGET_EXCEEDED' | 'ROLLBACK_FAILED' | 'RUNTIME_CLOSED' | 'RUNTIME_MISMATCH' | 'SHARE_CONSTRAINT_FAILED' | 'SLOT_NOT_LOADABLE' | 'UNSATISFIABLE_TOPOLOGY'
  | 'AMBIGUOUS_IMPLEMENTATION'
  | 'DUPLICATE_DEFINITION'
  | 'ENTRY_ACTIVATION_FAILED'
  | 'ENV_CLOSED'
  | 'FOREIGN_CANDIDATE_REF'
  | 'INACTIVE_REUSE_TARGET'
  | 'INCOMPATIBLE_IMPLEMENTATION'
  | 'INITIALIZATION_TIMEOUT'
  | 'INVALID_DESCRIPTOR'
  | 'INVALID_INHERITED_CHOICE'
  | 'LIFECYCLE_MISUSE'
  | 'LINEAGE_UNIQUENESS_CONFLICT'
  | 'LOAD_CANCELLED'
  | 'MISSING_AUTO_POLICY'
  | 'MISSING_BINDING'
  | 'MISSING_IMPLEMENTATION'
  | 'MISSING_INPUT'
  | 'MISSING_SERVICE'
  | 'OWNER_NOT_READY'
  | 'PLANNING_BUDGET_EXCEEDED'
  | 'ROLLBACK_FAILED'
  | 'RUNTIME_CLOSED'
  | 'RUNTIME_MISMATCH'
  | 'SHARE_CONSTRAINT_FAILED'
  | 'SLOT_NOT_LOADABLE'
  | 'UNSATISFIABLE_TOPOLOGY'
```

### `SynaErrorConstructor` — interface

Declared in `packages/core/src/errors.ts`.

```ts
interface SynaErrorConstructor
  new <Code extends SynaErrorCode>(code: Code, message: string, ...rest: DetailsArguments<Code>): SynaError<Code>
  readonly prototype: SynaError
```

### `SynaErrorDetails` — type

Declared in `packages/core/src/errors.ts`.

```ts
type SynaErrorDetails = { readonly AMBIGUOUS_IMPLEMENTATION: { readonly contract: string; readonly site: string; readonly families: readonly string[] } readonly DUPLICATE_DEFINITION: | { readonly existing: string; readonly received: string } | { readonly revision: string } | { readonly revision: string; readonly expected: string; readonly actual: string } readonly ENTRY_ACTIVATION_FAILED: { readonly entry: string readonly env: string readonly causeCode?: SynaErrorCode readonly causeDetails?: Readonly<Record<string, unknown>> } /** An Env-level refusal names the Env; a slot-level one (a load, retry or recovery under a closing owner) names the slot as well. */ readonly ENV_CLOSED: | { readonly env: string; readonly state: EnvState } | { readonly env: string; readonly state: EnvState; readonly slot: string; readonly revision: string } readonly FOREIGN_CANDIDATE_REF: { readonly expectedSourceSlot: string; readonly receivedSourceSlot: string } readonly INACTIVE_REUSE_TARGET: | { readonly constraint: 'fresh' | 'share'; readonly env: string; readonly revision: string } | { readonly constraint: 'fresh' | 'share'; readonly env: string; readonly family: string } readonly INCOMPATIBLE_IMPLEMENTATION: | { readonly binding: string; readonly contract: string; readonly reference: string } | { readonly binding: string; readonly revision: string } | { readonly contract: string; readonly reference: string } | { readonly family: string readonly range: string readonly site: string readonly realm: string readonly origin: string readonly required: readonly string[] readonly candidates: readonly { readonly revision: string; readonly provides: readonly string[] }[] } /** * One `load()` waited `deadlineMs` on the attempt named by `attempt` (running * for `elapsedMs`) without it settling. The attempt keeps running * (`attemptStillRunning`): its result is adopted if the owner Env is still * ready and discarded only if the owner closes. */ readonly INITIALIZATION_TIMEOUT: { readonly slot: string readonly revision: string readonly env: string readonly attempt: number readonly deadlineMs: number readonly elapsedMs: number readonly pendingLoads: readonly PendingLoad[] readonly suspectedWaitCycle?: readonly string[] readonly attemptStillRunning: true readonly note: string } /** * `descriptor` names the expected descriptor kind, the option, or the id / key * of the offending descriptor; `problem` is one token of a closed vocabulary * (`not-an-object`, `not-an-array`, `wrong-kind`, `unknown-kind`, * `empty-contract-id`, `self-override`, `override-cycle`, `forward-cycle`, * `not-service-revisions`, `parameters-not-an-object`, `invalid-assignment`, * `not-from-this-runtime`, `policy-result-not-an-array`, * `policy-result-not-a-permutation`); `site` where a dependency site exists, * `path` where a chain (an override cycle) exists. */ readonly INVALID_DESCRIPTOR: { readonly descriptor: string readonly problem: string readonly site?: string readonly path?: readonly string[] } readonly INVALID_INHERITED_CHOICE: { readonly site: string; readonly selectedKey: string; readonly candidates: readonly string[] } /** `onDispose()` called on a lifecycle whose setup attempt already settled; `state` is the attempt's. */ readonly LIFECYCLE_MISUSE: { readonly slot: string; readonly revision: string; readonly attempt: number; readonly state: string } readonly LINEAGE_UNIQUENESS_CONFLICT: | { readonly family: string readonly anchorRevision: string readonly anchorSlot: string readonly attempted: readonly { readonly revision: string; readonly slot: string; readonly cause: ForkCause | undefined; readonly path: readonly string[] }[] } | { readonly family: string; readonly slots: readonly string[] } readonly LOAD_CANCELLED: { readonly slot: string; readonly revision: string } readonly MISSING_AUTO_POLICY: { readonly contract: string; readonly site: string; readonly families: readonly string[] } readonly MISSING_BINDING: | { readonly binding: string; readonly site: string; readonly missing: readonly string[] } | EntryParametersMissing /** * A Binding assignment (the planner), a bare Contract or `auto()` site with no * implementer (the graph builder), or an implementation reference / candidate * naming a family, version or candidate the Runtime or the collection does not * hold (the catalog and `C.all`). `available` lists the versions of the named * family that are admitted (or held by the collection): `[]` for an unknown family. */ readonly MISSING_IMPLEMENTATION: | { readonly binding: string; readonly implementation: string; readonly version: string; readonly available: readonly string[] } | { readonly contract: string; readonly site: string } | { readonly contract: string; readonly implementation: string; readonly version: string; readonly available: readonly string[] } readonly MISSING_INPUT: | { readonly input: string; readonly site: string; readonly missing: readonly string[] } | EntryParametersMissing readonly MISSING_SERVICE: | { readonly revision: string } | { readonly binding: string; readonly revision: string } | { readonly revision: string; readonly site: string; readonly realm: string } | { readonly family: string; readonly range: string; readonly site: string; readonly realm: string } readonly OWNER_NOT_READY: { readonly entry: string; readonly env: string; readonly state: EnvState } readonly PLANNING_BUDGET_EXCEEDED: { readonly site: string; readonly budget: number } readonly ROLLBACK_FAILED: { readonly slot: string; readonly revision: string; readonly state: string } readonly RUNTIME_CLOSED: Record<string, never> readonly RUNTIME_MISMATCH: Record<string, never> readonly SHARE_CONSTRAINT_FAILED: { readonly revision: string; readonly env: string; readonly cause: ForkCause | undefined; readonly path: readonly string[] } /** `load()` on a slot that is closing, closed or abandoned; `state` is the slot's. */ readonly SLOT_NOT_LOADABLE: { readonly slot: string; readonly revision: string; readonly state: 'disposing' | 'disposed' | 'abandoned' } readonly UNSATISFIABLE_TOPOLOGY: { readonly site: string readonly candidates: readonly string[] readonly failures: readonly { readonly code: SynaErrorCode; readonly message: string; readonly details: Readonly<Record<string, unknown>> }[] } }
```

### `SynaErrorOf` — interface

Declared in `packages/core/src/errors.ts`.

```ts
interface SynaErrorOf<Code extends SynaErrorCode> extends Error
  readonly name: 'SynaError'
  readonly code: Code
  readonly details: Readonly<SynaErrorDetails[Code]>
```

### `UniquenessPolicy` — type

Declared in `packages/core/src/descriptors.ts`.

```ts
type UniquenessPolicy = 'none' | 'lineage'
  | 'none'
  | 'lineage'
```

### `UnsettledAttemptInspection` — interface

Declared in `packages/core/src/descriptors.ts`.

```ts
interface UnsettledAttemptInspection
  readonly attempt: number
  readonly slot: string
  readonly revision: string
  readonly env: string
  readonly state: 'timed-out' | 'abandoned' | 'rolling-back' | 'settling'
  readonly runningForMs: number
```
